--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -18,12 +18,12 @@ pipeline {
         }
         stage('Build & Test') {
             steps {
-                sh 'mvn clean test'
+                bat 'mvn clean test'
             }
         }
         stage('Allure Report') {
             steps {
-                sh 'mvn allure:report'
+                bat 'mvn allure:report'
             }
         }
     }
