--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -29,7 +29,7 @@ pipeline {
     }
     post {
         always {
-            archiveArtifacts artifacts: 'target/allure-results/**', allowEmptyArchive: true
+            allure includeProperties: false, jdk: '', results: [[path: 'target/allure-results']]
         }
     }
 }
