update: github-actions.yml

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,35 +1,43 @@
-name: Run Tests with Allure
+name: Run Tests
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
+    branches:
+      - main
+
+env:
+  ENV: "staging"
+  BROWSER: "chrome"
 
 jobs:
-  test:
+  tests:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Set up JDK
+      - name: Set up JDK 22
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Set up Chrome
-        uses: browser-actions/setup-chrome@v1
+      - name: Cache Maven dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-maven-
 
-      - name: Build with Maven
-        run: mvn clean test
+      - name: Run Tests
+        run: mvn clean test -Denv=${{ env.ENV }} -Dbrowser=${{ env.BROWSER }}
 
       - name: Generate Allure Report
         run: mvn allure:report
 
-      - name: Deploy Allure to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Upload Allure Report
+        uses: actions/upload-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./target/site/allure-maven-plugin
+          name: allure-report
+          path: target/site/allure-maven-plugin
