--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - master
+  pull_request:
+    types: [ opened, synchronize, reopened ]
   schedule:
     - cron: "0 3 * * *"
 
